--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,9 +31,11 @@ jobs:
         uses: hashicorp/setup-terraform@v1
 
       - name: Terraform Initialize
+        working-directory: ./terraform
         run: terraform init
 
       - name: Terraform Apply
+        working-directory: ./terraform
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
