--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,19 +13,21 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: your-aws-region
 
       - name: Build and push Docker images
         run: |
-          docker-compose build
-          docker tag demo-ci_backend:latest ${{ secrets.DOCKER_HUB_USERNAME }}/backend:${{ github.sha }}
-          docker tag demo-ci_frontend:latest ${{ secrets.DOCKER_HUB_USERNAME }}/frontend:${{ github.sha }}
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/backend:${{ github.sha }}
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/frontend:${{ github.sha }}
+          echo ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.your-aws-region.amazonaws.com/demo-ci-backend:${{ github.sha }} > ./demo-ci-ecr-repo
+          echo ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.your-aws-region.amazonaws.com/demo-ci-frontend:${{ github.sha }} >> ./demo-ci-ecr-repo
+          docker build -t ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.your-aws-region.amazonaws.com/demo-ci-backend:${{ github.sha }} backend/
+          docker build -t ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.your-aws-region.amazonaws.com/demo-ci-frontend:${{ github.sha }} frontend/
+          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.your-aws-region.amazonaws.com/demo-ci-backend:${{ github.sha }}
+          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.your-aws-region.amazonaws.com/demo-ci-frontend:${{ github.sha }}
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
@@ -36,7 +38,4 @@ jobs:
 
       - name: Terraform Apply
         working-directory: ./terraform
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: terraform apply -auto-approve
